tests/lean/1371.lean.expected.out
1371.lean:5:2-5:3: error: redundant alternative #3
1371.lean:6:2-6:3: error: redundant alternative #4
